Lab/Lab2/syntax.output
语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier ExtDecList error
    8       | Specifier error
    9       | Specifier error SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB INT error
   22       | VarDec LB error RB

   23 FunDec: ID LP VarList RP
   24       | ID LP RP
   25       | ID LP VarList error
   26       | ID LP error RP

   27 VarList: ParamDec COMMA VarList
   28        | ParamDec

   29 ParamDec: Specifier VarDec

   30 CompSt: LC DefList StmtList RC

   31 StmtList: Stmt StmtList
   32         | %empty

   33 Stmt: Exp SEMI
   34     | error SEMI
   35     | CompSt
   36     | RETURN Exp SEMI
   37     | RETURN Exp error
   38     | IF LP Exp RP Stmt
   39     | IF LP Exp RP Stmt ELSE Stmt
   40     | IF LP error RP Stmt
   41     | IF LP error RP Stmt ELSE Stmt
   42     | WHILE LP Exp RP Stmt

   43 $@1: %empty

   44 Stmt: WHILE LP error RP $@1 Stmt

   45 DefList: Def DefList
   46        | %empty

   47 Def: Specifier DecList SEMI
   48    | Specifier error SEMI
   49    | Specifier DecList error

   50 DecList: Dec
   51        | Dec COMMA DecList

   52 Dec: VarDec
   53    | VarDec ASSIGNOP Exp

   54 Exp: Exp ASSIGNOP Exp
   55    | Exp AND Exp
   56    | Exp OR Exp
   57    | Exp RELOP Exp
   58    | Exp PLUS Exp
   59    | Exp MINUS Exp
   60    | Exp STAR Exp
   61    | Exp DIV Exp
   62    | LP Exp RP
   63    | LP Exp error
   64    | MINUS Exp
   65    | NOT Exp
   66    | ID LP Args RP
   67    | ID LP RP
   68    | ID LP Args error
   69    | ID LP error RP
   70    | Exp LB Exp RB
   71    | Exp LB error RB
   72    | Exp LB Exp error
   73    | Exp DOT ID
   74    | Exp DOT error
   75    | ID
   76    | INT
   77    | FLOAT

   78 Args: Exp COMMA Args
   79     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 9 21 22 25 26 34 37 40 41 44 48 49 63 68 69 71 72 74
INT (258) 20 21 76
FLOAT (259) 77
STRUCT (260) 14 15
ID (261) 16 18 19 23 24 25 26 66 67 68 69 73 75
SEMI (262) 4 5 9 33 34 36 47 48
COMMA (263) 11 27 51 78
ASSIGNOP (264) 53 54
RELOP (265) 57
PLUS (266) 58
MINUS (267) 59 64
STAR (268) 60
DIV (269) 61
AND (270) 55
OR (271) 56
NOT (272) 65
DOT (273) 73 74
TYPE (274) 12
LP (275) 23 24 25 26 38 39 40 41 42 44 62 63 66 67 68 69
RP (276) 23 24 26 38 39 40 41 42 44 62 66 67 69
LB (277) 20 21 22 70 71 72
RB (278) 20 22 70 71
LC (279) 14 30
RC (280) 14 30
RETURN (281) 36 37
IF (282) 38 39 40 41
ELSE (283) 39 41
WHILE (284) 42 44
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    左： 0
Program (32)
    左： 1, 右： 0
ExtDefList (33)
    左： 2 3, 右： 1 2
ExtDef (34)
    左： 4 5 6 7 8 9, 右： 2
ExtDecList (35)
    左： 10 11, 右： 4 7 11
Specifier (36)
    左： 12 13, 右： 4 5 6 7 8 9 29 47 48 49
StructSpecifier (37)
    左： 14 15, 右： 13
OptTag (38)
    左： 16 17, 右： 14
Tag (39)
    左： 18, 右： 15
VarDec (40)
    左： 19 20 21 22, 右： 10 11 20 21 22 29 52 53
FunDec (41)
    左： 23 24 25 26, 右： 6
VarList (42)
    左： 27 28, 右： 23 25 27
ParamDec (43)
    左： 29, 右： 27 28
CompSt (44)
    左： 30, 右： 6 35
StmtList (45)
    左： 31 32, 右： 30 31
Stmt (46)
    左： 33 34 35 36 37 38 39 40 41 42 44, 右： 31 38 39 40 41
    42 44
$@1 (47)
    左： 43, 右： 44
DefList (48)
    左： 45 46, 右： 14 30 45
Def (49)
    左： 47 48 49, 右： 45
DecList (50)
    左： 50 51, 右： 47 49 51
Dec (51)
    左： 52 53, 右： 50 51
Exp (52)
    左： 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
    73 74 75 76 77, 右： 33 36 37 38 39 42 53 54 55 56 57 58 59 60
    61 62 63 64 65 70 71 72 73 74 78 79
Args (53)
    左： 78 79, 右： 66 68 78


State 0

    0 $accept: . Program $end

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          转到状态 3
    ExtDefList       转到状态 4
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 1

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 17 (OptTag)

    OptTag  转到状态 9
    Tag     转到状态 10


State 2

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 12
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . ExtDecList error
    8       | Specifier . error
    9       | Specifier . error SEMI

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  转到状态 16
    VarDec      转到状态 17
    FunDec      转到状态 18


State 7

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 8

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 9

   14 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 10

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  接受


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

    8 ExtDef: Specifier error .
    9       | Specifier error . SEMI

    SEMI  shift, and go to state 20

    $default  reduce using rule 8 (ExtDef)


State 14

   19 VarDec: ID .
   23 FunDec: ID . LP VarList RP
   24       | ID . LP RP
   25       | ID . LP VarList error
   26       | ID . LP error RP

    LP  shift, and go to state 21

    $default  reduce using rule 19 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI
    7       | Specifier ExtDecList . error

    error  shift, and go to state 22
    SEMI   shift, and go to state 23


State 17

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB INT error
   22       | VarDec . LB error RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 10 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 26

    CompSt  转到状态 27


State 19

   14 StructSpecifier: STRUCT OptTag LC . DefList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 46 (DefList)

    Specifier        转到状态 28
    StructSpecifier  转到状态 7
    DefList          转到状态 29
    Def              转到状态 30


State 20

    9 ExtDef: Specifier error SEMI .

    $default  reduce using rule 9 (ExtDef)


State 21

   23 FunDec: ID LP . VarList RP
   24       | ID LP . RP
   25       | ID LP . VarList error
   26       | ID LP . error RP

    error   shift, and go to state 31
    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2
    RP      shift, and go to state 32

    Specifier        转到状态 33
    StructSpecifier  转到状态 7
    VarList          转到状态 34
    ParamDec         转到状态 35


State 22

    7 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 7 (ExtDef)


State 23

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 24

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 36

    ExtDecList  转到状态 37
    VarDec      转到状态 17


State 25

   20 VarDec: VarDec LB . INT RB
   21       | VarDec LB . INT error
   22       | VarDec LB . error RB

    error  shift, and go to state 38
    INT    shift, and go to state 39


State 26

   30 CompSt: LC . DefList StmtList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 46 (DefList)

    Specifier        转到状态 28
    StructSpecifier  转到状态 7
    DefList          转到状态 40
    Def              转到状态 30


State 27

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 28

   47 Def: Specifier . DecList SEMI
   48    | Specifier . error SEMI
   49    | Specifier . DecList error

    error  shift, and go to state 41
    ID     shift, and go to state 36

    VarDec   转到状态 42
    DecList  转到状态 43
    Dec      转到状态 44


State 29

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 45


State 30

   45 DefList: Def . DefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 46 (DefList)

    Specifier        转到状态 28
    StructSpecifier  转到状态 7
    DefList          转到状态 46
    Def              转到状态 30


State 31

   26 FunDec: ID LP error . RP

    RP  shift, and go to state 47


State 32

   24 FunDec: ID LP RP .

    $default  reduce using rule 24 (FunDec)


State 33

   29 ParamDec: Specifier . VarDec

    ID  shift, and go to state 36

    VarDec  转到状态 48


State 34

   23 FunDec: ID LP VarList . RP
   25       | ID LP VarList . error

    error  shift, and go to state 49
    RP     shift, and go to state 50


State 35

   27 VarList: ParamDec . COMMA VarList
   28        | ParamDec .

    COMMA  shift, and go to state 51

    $default  reduce using rule 28 (VarList)


State 36

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 37

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 38

   22 VarDec: VarDec LB error . RB

    RB  shift, and go to state 52


State 39

   20 VarDec: VarDec LB INT . RB
   21       | VarDec LB INT . error

    error  shift, and go to state 53
    RB     shift, and go to state 54


State 40

   30 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    ID      shift, and go to state 58
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 26
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64

    RC  reduce using rule 32 (StmtList)

    CompSt    转到状态 65
    StmtList  转到状态 66
    Stmt      转到状态 67
    Exp       转到状态 68


State 41

   48 Def: Specifier error . SEMI

    SEMI  shift, and go to state 69


State 42

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB INT error
   22       | VarDec . LB error RB
   52 Dec: VarDec .
   53    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 70
    LB        shift, and go to state 25

    $default  reduce using rule 52 (Dec)


State 43

   47 Def: Specifier DecList . SEMI
   49    | Specifier DecList . error

    error  shift, and go to state 71
    SEMI   shift, and go to state 72


State 44

   50 DecList: Dec .
   51        | Dec . COMMA DecList

    COMMA  shift, and go to state 73

    $default  reduce using rule 50 (DecList)


State 45

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 46

   45 DefList: Def DefList .

    $default  reduce using rule 45 (DefList)


State 47

   26 FunDec: ID LP error RP .

    $default  reduce using rule 26 (FunDec)


State 48

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB INT error
   22       | VarDec . LB error RB
   29 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 29 (ParamDec)


State 49

   25 FunDec: ID LP VarList error .

    $default  reduce using rule 25 (FunDec)


State 50

   23 FunDec: ID LP VarList RP .

    $default  reduce using rule 23 (FunDec)


State 51

   27 VarList: ParamDec COMMA . VarList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    Specifier        转到状态 33
    StructSpecifier  转到状态 7
    VarList          转到状态 74
    ParamDec         转到状态 35


State 52

   22 VarDec: VarDec LB error RB .

    $default  reduce using rule 22 (VarDec)


State 53

   21 VarDec: VarDec LB INT error .

    $default  reduce using rule 21 (VarDec)


State 54

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 55

   34 Stmt: error . SEMI

    SEMI  shift, and go to state 75


State 56

   76 Exp: INT .

    $default  reduce using rule 76 (Exp)


State 57

   77 Exp: FLOAT .

    $default  reduce using rule 77 (Exp)


State 58

   66 Exp: ID . LP Args RP
   67    | ID . LP RP
   68    | ID . LP Args error
   69    | ID . LP error RP
   75    | ID .

    LP  shift, and go to state 76

    $default  reduce using rule 75 (Exp)


State 59

   64 Exp: MINUS . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 77


State 60

   65 Exp: NOT . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 78


State 61

   62 Exp: LP . Exp RP
   63    | LP . Exp error

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 79


State 62

   36 Stmt: RETURN . Exp SEMI
   37     | RETURN . Exp error

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 80


State 63

   38 Stmt: IF . LP Exp RP Stmt
   39     | IF . LP Exp RP Stmt ELSE Stmt
   40     | IF . LP error RP Stmt
   41     | IF . LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 81


State 64

   42 Stmt: WHILE . LP Exp RP Stmt
   44     | WHILE . LP error RP $@1 Stmt

    LP  shift, and go to state 82


State 65

   35 Stmt: CompSt .

    $default  reduce using rule 35 (Stmt)


State 66

   30 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 83


State 67

   31 StmtList: Stmt . StmtList

    error   shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    ID      shift, and go to state 58
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 26
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64

    RC  reduce using rule 32 (StmtList)

    CompSt    转到状态 65
    StmtList  转到状态 84
    Stmt      转到状态 67
    Exp       转到状态 68


State 68

   33 Stmt: Exp . SEMI
   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   70    | Exp . LB Exp RB
   71    | Exp . LB error RB
   72    | Exp . LB Exp error
   73    | Exp . DOT ID
   74    | Exp . DOT error

    SEMI      shift, and go to state 85
    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95


State 69

   48 Def: Specifier error SEMI .

    $default  reduce using rule 48 (Def)


State 70

   53 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 96


State 71

   49 Def: Specifier DecList error .

    $default  reduce using rule 49 (Def)


State 72

   47 Def: Specifier DecList SEMI .

    $default  reduce using rule 47 (Def)


State 73

   51 DecList: Dec COMMA . DecList

    ID  shift, and go to state 36

    VarDec   转到状态 42
    DecList  转到状态 97
    Dec      转到状态 44


State 74

   27 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 27 (VarList)


State 75

   34 Stmt: error SEMI .

    $default  reduce using rule 34 (Stmt)


State 76

   66 Exp: ID LP . Args RP
   67    | ID LP . RP
   68    | ID LP . Args error
   69    | ID LP . error RP

    error  shift, and go to state 98
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    RP     shift, and go to state 99

    Exp   转到状态 100
    Args  转到状态 101


State 77

   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   64    | MINUS Exp .
   70    | Exp . LB Exp RB
   71    | Exp . LB error RB
   72    | Exp . LB Exp error
   73    | Exp . DOT ID
   74    | Exp . DOT error

    STAR  shift, and go to state 90
    DIV   shift, and go to state 91
    DOT   shift, and go to state 94
    LB    shift, and go to state 95

    $default  reduce using rule 64 (Exp)


State 78

   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   65    | NOT Exp .
   70    | Exp . LB Exp RB
   71    | Exp . LB error RB
   72    | Exp . LB Exp error
   73    | Exp . DOT ID
   74    | Exp . DOT error

    DOT  shift, and go to state 94
    LB   shift, and go to state 95

    $default  reduce using rule 65 (Exp)


State 79

   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   62    | LP Exp . RP
   63    | LP Exp . error
   70    | Exp . LB Exp RB
   71    | Exp . LB error RB
   72    | Exp . LB Exp error
   73    | Exp . DOT ID
   74    | Exp . DOT error

    error     shift, and go to state 102
    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    RP        shift, and go to state 103
    LB        shift, and go to state 95


State 80

   36 Stmt: RETURN Exp . SEMI
   37     | RETURN Exp . error
   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   70    | Exp . LB Exp RB
   71    | Exp . LB error RB
   72    | Exp . LB Exp error
   73    | Exp . DOT ID
   74    | Exp . DOT error

    error     shift, and go to state 104
    SEMI      shift, and go to state 105
    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95


State 81

   38 Stmt: IF LP . Exp RP Stmt
   39     | IF LP . Exp RP Stmt ELSE Stmt
   40     | IF LP . error RP Stmt
   41     | IF LP . error RP Stmt ELSE Stmt

    error  shift, and go to state 106
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 107


State 82

   42 Stmt: WHILE LP . Exp RP Stmt
   44     | WHILE LP . error RP $@1 Stmt

    error  shift, and go to state 108
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 109


State 83

   30 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 30 (CompSt)


State 84

   31 StmtList: Stmt StmtList .

    $default  reduce using rule 31 (StmtList)


State 85

   33 Stmt: Exp SEMI .

    $default  reduce using rule 33 (Stmt)


State 86

   54 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 110


State 87

   57 Exp: Exp RELOP . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 111


State 88

   58 Exp: Exp PLUS . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 112


State 89

   59 Exp: Exp MINUS . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 113


State 90

   60 Exp: Exp STAR . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 114


State 91

   61 Exp: Exp DIV . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 115


State 92

   55 Exp: Exp AND . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 116


State 93

   56 Exp: Exp OR . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 117


State 94

   73 Exp: Exp DOT . ID
   74    | Exp DOT . error

    error  shift, and go to state 118
    ID     shift, and go to state 119


State 95

   70 Exp: Exp LB . Exp RB
   71    | Exp LB . error RB
   72    | Exp LB . Exp error

    error  shift, and go to state 120
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 121


State 96

   53 Dec: VarDec ASSIGNOP Exp .
   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   70    | Exp . LB Exp RB
   71    | Exp . LB error RB
   72    | Exp . LB Exp error
   73    | Exp . DOT ID
   74    | Exp . DOT error

    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95

    $default  reduce using rule 53 (Dec)


State 97

   51 DecList: Dec COMMA DecList .

    $default  reduce using rule 51 (DecList)


State 98

   69 Exp: ID LP error . RP

    RP  shift, and go to state 122


State 99

   67 Exp: ID LP RP .

    $default  reduce using rule 67 (Exp)


State 100

   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   70    | Exp . LB Exp RB
   71    | Exp . LB error RB
   72    | Exp . LB Exp error
   73    | Exp . DOT ID
   74    | Exp . DOT error
   78 Args: Exp . COMMA Args
   79     | Exp .

    COMMA     shift, and go to state 123
    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95

    $default  reduce using rule 79 (Args)


State 101

   66 Exp: ID LP Args . RP
   68    | ID LP Args . error

    error  shift, and go to state 124
    RP     shift, and go to state 125


State 102

   63 Exp: LP Exp error .

    $default  reduce using rule 63 (Exp)


State 103

   62 Exp: LP Exp RP .

    $default  reduce using rule 62 (Exp)


State 104

   37 Stmt: RETURN Exp error .

    $default  reduce using rule 37 (Stmt)


State 105

   36 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 36 (Stmt)


State 106

   40 Stmt: IF LP error . RP Stmt
   41     | IF LP error . RP Stmt ELSE Stmt

    RP  shift, and go to state 126


State 107

   38 Stmt: IF LP Exp . RP Stmt
   39     | IF LP Exp . RP Stmt ELSE Stmt
   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   70    | Exp . LB Exp RB
   71    | Exp . LB error RB
   72    | Exp . LB Exp error
   73    | Exp . DOT ID
   74    | Exp . DOT error

    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    RP        shift, and go to state 127
    LB        shift, and go to state 95


State 108

   44 Stmt: WHILE LP error . RP $@1 Stmt

    RP  shift, and go to state 128


State 109

   42 Stmt: WHILE LP Exp . RP Stmt
   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   70    | Exp . LB Exp RB
   71    | Exp . LB error RB
   72    | Exp . LB Exp error
   73    | Exp . DOT ID
   74    | Exp . DOT error

    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    RP        shift, and go to state 129
    LB        shift, and go to state 95


State 110

   54 Exp: Exp . ASSIGNOP Exp
   54    | Exp ASSIGNOP Exp .
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   70    | Exp . LB Exp RB
   71    | Exp . LB error RB
   72    | Exp . LB Exp error
   73    | Exp . DOT ID
   74    | Exp . DOT error

    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95

    $default  reduce using rule 54 (Exp)


State 111

   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   57    | Exp RELOP Exp .
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   70    | Exp . LB Exp RB
   71    | Exp . LB error RB
   72    | Exp . LB Exp error
   73    | Exp . DOT ID
   74    | Exp . DOT error

    PLUS   shift, and go to state 88
    MINUS  shift, and go to state 89
    STAR   shift, and go to state 90
    DIV    shift, and go to state 91
    DOT    shift, and go to state 94
    LB     shift, and go to state 95

    $default  reduce using rule 57 (Exp)


State 112
